<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@color/skyblue"
    android:gravity="center">

    <LinearLayout
        style="@style/myViewStyle.LY">

        <TextView android:id="@+id/textVquizid"
            style="@style/myViewStyle.TV"
            android:text="@string/quiz"/>

        <EditText
            android:id="@+id/editTquizid"
            style="@style/myViewStyle.ET"
            android:hint="@string/getquiz"/>

    </LinearLayout>

    <LinearLayout
        style="@style/myViewStyle.LY">

        <TextView android:id="@+id/textVexpid"
            style="@style/myViewStyle.TV"
            android:text="@string/exp"/>

        <EditText
            android:id="@+id/editTexpid"
            style="@style/myViewStyle.ET"
            android:hint="@string/getexp"/>

    </LinearLayout>

    <LinearLayout
        style="@style/myViewStyle.LY">

        <TextView android:id="@+id/textVlabid"
            style="@style/myViewStyle.TV"
            android:text="@string/lab"/>

        <EditText
            android:id="@+id/editTlabid"
            style="@style/myViewStyle.ET"
            android:hint="@string/getlab"/>

    </LinearLayout>

    <LinearLayout
        style="@style/myViewStyle.LY">

        <TextView android:id="@+id/textVproyid"
            style="@style/myViewStyle.TV"
            android:text="@string/proy"/>

        <EditText
            android:id="@+id/editTproyid"
            style="@style/myViewStyle.ET"
            android:hint="@string/getproy"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonCalcid"
        style="@style/myViewStyle.BT"
        android:text="@string/calcular"/>

    <LinearLayout
        style="@style/myViewStyle.LY">

        <TextView
            android:id="@+id/textVresid"
            style="@style/myViewStyle.TV"
            android:textSize="30sp"
            android:text="@string/result"/>

        <TextView
            android:id="@+id/textVsetresultid"
            style="@style/myViewStyle.TV"
            android:gravity="center"
            android:textSize="30sp"
            android:hint="@string/setresult"/>


    </LinearLayout>

    <!--<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="AbrirAcercaDe"
        />-->

</LinearLayout>
